# Copyright (c) 2023 Ian C. Good
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
# THE SOFTWARE.
#

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'swim-protocol'
dynamic = ['version']
authors = [
    { name = 'Ian Good', email = 'ian@icgood.net' },
]
description = 'SWIM protocol implementation for exchanging cluster membership status and metadata.'
license = { file = 'LICENSE.md' }
readme = { file = 'README.md', content-type = 'text/markdown' }
requires-python = '~=3.9'
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
dependencies = [
    'importlib-metadata; python_version < "3.10"',
]

[project.urls]
'Homepage' = 'https://github.com/icgood/swim-protocol/'
'API Documentation' = 'https://icgood.github.io/swim-protocol/'

[project.scripts]
swim-protocol-demo = 'swimprotocol.demo:main'

[tool.hatch.version]
path = 'swimprotocol/__about__.py'

[project.entry-points.'swimprotocol.transport']
udp = 'swimprotocol.udp:UdpTransport'

[tool.hatch.build]
exclude = ['/doc', '/.github']

[tool.hatch.build.targets.wheel]
packages = ['swimprotocol']

[tool.mypy]
strict = true
files = ['swimprotocol', 'test']

[tool.bandit]
skips = ['B101']

[tool.pytest.ini_options]
testpaths = 'test'
norecursedirs = 'doc'

[tool.coverage.report]
omit = ['*/__about__.py', '*/main.py', '*/demo.py']
exclude_lines = [
    'pragma: no cover',
    'NotImplemented',
    '^\s*...\s*$',
    'def __repr__',
]

[tool.hatch.envs.default]
dependencies = [
    'mypy',
    'pytest',
    'pytest-asyncio',
    'pytest-cov',
    'flake8',
    'flake8-annotations',
    'flake8-bugbear',
    'bandit[toml]',
]

[tool.hatch.envs.default.scripts]
run-pytest = 'py.test --cov-report=term-missing --cov=swimprotocol'
run-mypy = 'mypy swimprotocol test'
run-flake8 = 'flake8 swimprotocol test'
run-bandit = 'bandit -c pyproject.toml -qr swimprotocol'
check = ['run-pytest', 'run-mypy', 'run-flake8', 'run-bandit']

[[tool.hatch.envs.all.matrix]]
python = ['3.9', '3.10', '3.11']

[tool.hatch.envs.doc]
dependencies = [
    'sphinx',
    'sphinx-autodoc-typehints',
    'cloud_sptheme',
]

[tool.hatch.envs.doc.scripts]
build = 'make -C doc html'
browse = ['build', 'open doc/build/html/index.html']
