# Copyright (c) 2023 Ian C. Good
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
# THE SOFTWARE.
#

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'swim-protocol'
dynamic = ['version']
authors = [
    { name = 'Ian Good', email = 'ian@icgood.net' },
]
description = 'SWIM protocol implementation for exchanging cluster membership status and metadata.'
license = { file = 'LICENSE.md' }
readme = { file = 'README.md', content-type = 'text/markdown' }
requires-python = '~=3.10'
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]

[project.urls]
'Homepage' = 'https://github.com/icgood/swim-protocol/'
'API Documentation' = 'https://icgood.github.io/swim-protocol/'

[project.scripts]
swim-protocol-sync = 'swimprotocol.sync:main'
swim-protocol-demo = 'swimprotocol.demo:main'

[project.optional-dependencies]
dev = [
    'mypy',
    'pytest',
    'pytest-asyncio',
    'pytest-cov',
    'ruff',
    'pycodestyle',
    'autopep8',
]
doc = [
    'sphinx',
    'sphinx-autodoc-typehints',
    'cloud_sptheme',
]

[tool.hatch.version]
path = 'swimprotocol/__about__.py'

[project.entry-points.'swimprotocol.transport']
udp = 'swimprotocol.udp:UdpTransport'

[tool.hatch.build]
exclude = ['/doc', '/.github']

[tool.hatch.build.targets.wheel]
packages = ['swimprotocol']

[tool.mypy]
strict = true
files = ['swimprotocol', 'test']

[tool.ruff]
select = ['ANN', 'B', 'E', 'F', 'N', 'S', 'W']
ignore = ['ANN101', 'ANN102', 'ANN401', 'S101']
line-length = 79

[tool.ruff.per-file-ignores]
"test/*" = ['ANN']

[tool.autopep8]
aggressive = 1
exclude = '*/demo/*'

[tool.pytest.ini_options]
testpaths = 'test'
norecursedirs = 'doc'

[tool.coverage.report]
omit = ['*/__about__.py', '*/main.py', '*/demo.py']
exclude_lines = [
    'pragma: no cover',
    'NotImplemented',
    '^\s*...\s*$',
    'def __repr__',
]

[tool.hatch.envs.default]
features = ['dev']

[tool.hatch.envs.default.scripts]
run-pytest = 'py.test --cov-report=term-missing --cov=swimprotocol'
run-mypy = 'mypy swimprotocol test'
run-ruff = 'ruff swimprotocol test'
run-autopep8 = 'autopep8 --exit-code -dr swimprotocol test'
check = ['run-pytest', 'run-autopep8', 'run-mypy', 'run-ruff']

[[tool.hatch.envs.all.matrix]]
python = ['3.10', '3.11']

[tool.hatch.envs.doc]
features = ['doc']

[tool.hatch.envs.doc.scripts]
build = 'make -C doc html'
browse = ['build', 'open doc/build/html/index.html']
